# temporal-cli-mcp

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  main.py  mcp_config.json  pyproject.toml  temporal_cli_mcp.py  test_mcp.py  test_query_builder.py
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architectural_improvements.md  architecture_patterns.md  code_style_conventions.md  new_development_patterns.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/temporal_cli_mcp/: __init__.py  __main__.py  base.py  command_builder.py  config.py  core.py  exceptions.py  guides.py  models.py  query_builder.py  workflow_fallback.py
src/temporal_cli_mcp/workflow/: __init__.py  analyze.py  build_query.py  cancel.py  count.py  describe.py  failed_runs.py  history.py  list.py  query.py  reset.py  signal.py  start.py  terminate.py  trace.py
temporal-cli-skill/: SKILL.md
temporal-cli-skill/assets/: event-types.json  jq-filters.json  query-templates.json
temporal-cli-skill/references/: 01-command-patterns.md  02-query-construction.md  03-custom-search-attributes.md  04-payload-decoding.md  05-history-filtering.md  06-smart-patterns.md  07-error-handling.md  08-safety-checks.md
test_reports/: report.html
tests/: TEST_STRATEGY.md  __init__.py  mcp_client_simulator.py  pytest.ini  run_tests.py  test_config_examples.md  test_mcp_core.py  test_utils.py
